# pypmi

./: .gitattributes  .gitignore  README.md  pyproject.toml
.github/: docs.yml
.github/workflows/: docs.yml
docs/: api.rst  conf.py  index.rst
pypmi/: __init__.py  _info.py  _version.py  bids.py  cluster.py  fetchers.py  loaders.py  utils.py
pypmi/data/: genetics.json  heuristic.py  studydata.json
pypmi/tests/: __init__.py  conftest.py  test_fetchers.py  test_loaders.py  test_utils.py
